--- a/_includes/page-header.html
+++ b/_includes/page-header.html
@@ -1,5 +1,6 @@
 <section class="page-header">
   <h1 class="project-name">{{ site.title }}</h1>
   <h2 class="project-tagline">{{ site.tagline }}</h2>
-  
-</section>
+  <a href="#" class="btn">View on Portfolio</a>
+  <a href="#" class="btn">View on GitHub</a>
+  </section>
